Python download and explore in progress

--- a/tutorials-in-development/Other/test_code_tabs_fragment_figures.html
+++ b/tutorials-in-development/Other/test_code_tabs_fragment_figures.html
@@ -50,7 +50,7 @@ import matplotlib.pyplot as plt</code></pre>
 <div id="python-2" class="section level4">
 <h4>Python</h4>
 <pre class="python"><code>veg.keys()</code></pre>
-<pre><code>## dict_keys([&#39;variables_10098&#39;, &#39;validation_10098&#39;, &#39;categoricalCodes_10098&#39;, &#39;readme_10098&#39;, &#39;vst_perplotperyear&#39;, &#39;vst_apparentindividual&#39;, &#39;vst_mappingandtagging&#39;, &#39;issueLog_10098&#39;, &#39;citation_10098_PROVISIONAL&#39;, &#39;citation_10098_RELEASE-2024&#39;])</code></pre>
+<pre><code>## dict_keys([&#39;categoricalCodes_10098&#39;, &#39;citation_10098_PROVISIONAL&#39;, &#39;citation_10098_RELEASE-2024&#39;, &#39;issueLog_10098&#39;, &#39;readme_10098&#39;, &#39;validation_10098&#39;, &#39;variables_10098&#39;, &#39;vst_apparentindividual&#39;, &#39;vst_mappingandtagging&#39;, &#39;vst_perplotperyear&#39;])</code></pre>
 </div>
 </div>
 <div id="section-2" class="section level3 unnumbered">
