updates to make plotly figs more readable

--- a/tutorials/R/AIS-data/AIS-AOS-integration-tutorial/aquatic-data-product-integration.html
+++ b/tutorials/R/AIS-data/AIS-AOS-integration-tutorial/aquatic-data-product-integration.html
@@ -1030,8 +1030,11 @@ other case studies using different NEON data products.</p>
 hurricane. Two NEON D04 aquatic sites were impacted. Here, we scale three data
 products across time to get an integrated look at how Hurricane Fiona (red line)
 affected the hydrology, morphology, and biology of two streams.</p>
-<p><img src="images/fionaNEON.png" alt="" width="100%" />
-Total rainfall accumulation in Puerto Rico from Hurricane Fiona, overlaid with
+<div class="figure" style="text-align: center">
+<img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/ais-aos/fionaNEON.png" alt=" "  />
+<p class="Hurricane Fiona Impact Map"> </p>
+</div>
+<p>Total rainfall accumulation in Puerto Rico from Hurricane Fiona, overlaid with
 approximate locations of the two NEON D04 aquatic sites: CUPE, GUIL.
 Image source: <a href="https://www.nhc.noaa.gov/data/tcr/AL072022_Fiona.pdf">https://www.nhc.noaa.gov/data/tcr/AL072022_Fiona.pdf</a></p>
 <p>For this case study, we will look again at the relationship between stream
@@ -1436,51 +1439,70 @@ swc &lt;- neonUtilities::loadByProduct(dpID=&quot;DP1.20093.001&quot;,
 
 list2env(swc,envir = .GlobalEnv)
 </code></pre>
-<p>The data table we are interested in here is:</p>
-<ul>
-<li><code>swc_externalLabDataByAnalyte</code>
-<ul>
-<li>
-<p>Long-format results of chemical analysis of up to 28 unique analytes from
-surface water and groundwater grab samples.</p>
-<h1 id="check-if-there-are-duplicate-doc-records">check if there are duplicate DOC records</h1>
-<h1 id="what-are-the-primary-keys-in-swc-externallabdatabyanalyte">what are the primary keys in swc_externalLabDataByAnalyte?</h1>
-<p>message(“Primary keys in swc_externalLabDataByAnalyte are: “,
-paste(variables_20093$fieldName[
-variables_20093$table==“swc_externalLabDataByAnalyte”
-&amp;variables_20093$primaryKey==“Y”
-],
-collapse = “, “)
-)</p>
-<h1 id="identify-duplicates-in-swc-externallabdatabyanalyte">identify duplicates in swc_externalLabDataByAnalyte</h1>
-<p>swc_externalLabDataByAnalyte_dups &lt;- neonOS::removeDups(
-swc_externalLabDataByAnalyte,
-variables_20093)</p>
-<h1 id="no-duplicates-great">no duplicates, great!</h1>
-<h1 id="lab-data-is-published-long-format-with-28-analytes-analyzed">lab data is published <code>long-format</code> with 28 analytes analyzed</h1>
-<h1 id="show-all-the-analytes-published-in-the-lab-data">show all the analytes published in the lab data</h1>
-<p>print(unique(swc_externalLabDataByAnalyte$analyte))</p>
-<h2 id="1-tdp-so4-tp-nh4-n-mg">[1] “TDP”                    “SO4”                    “TP”                     “NH4 - N”                “Mg”</h2>
-<h2 id="6-no2-n-f-si-tds-uv-absorbance-254-nm">[6] “NO2 - N”                “F”                      “Si”                     “TDS”                    “UV Absorbance (254 nm)”</h2>
-<h2 id="11-cl-ca-tn-uv-absorbance-280-nm-no3-no2-n">[11] “Cl”                     “Ca”                     “TN”                     “UV Absorbance (280 nm)” “NO3+NO2 - N”</h2>
-<h2 id="16-tss-tpc-tdn-na-br">[16] “TSS”                    “TPC”                    “TDN”                    “Na”                     “Br”</h2>
-<h2 id="21-mn-fe-doc-dic-k">[21] “Mn”                     “Fe”                     “DOC”                    “DIC”                    “K”</h2>
-<h2 id="26-ortho-p-toc-tpn">[26] “Ortho - P”              “TOC”                    “TPN”</h2>
-<h1 id="for-this-exercise-subset-lab-data-to-only-dissolved-organic-carbon-doc">for this exercise, subset lab data to only dissolved organic carbon (DOC)</h1>
-<p>DOC &lt;- swc_externalLabDataByAnalyte%&gt;%
-dplyr::filter(analyte==“DOC”)</p>
-<h1 id="plot-a-timeseries-of-doc">plot a timeseries of DOC</h1>
-<p>DOC_plot &lt;- DOC%&gt;%
-ggplot2::ggplot(aes(x=collectDate,y=analyteConcentration))+
-ggplot2::geom_point()+
-ggplot2::labs(title = “Dissolved organic carbon (DOC) over time”,
-y = “DOC (mg/L)”,
-x = “Date”)</p>
-<p>DOC_plot</p>
-</li>
-</ul>
-</li>
-</ul>
+<p>The data table we are interested in here is <code>swc_externalLabDataByAnalyte</code>:
+“Long-format results of chemical analysis of up to 28 unique analytes from
+surface water and groundwater grab samples.”</p>
+<pre><code># check if there are duplicate DOC records
+
+# what are the primary keys in swc_externalLabDataByAnalyte?
+
+
+
+message(&quot;Primary keys in swc_externalLabDataByAnalyte are: &quot;,
+        paste(variables_20093$fieldName[
+          variables_20093$table==&quot;swc_externalLabDataByAnalyte&quot;
+          &amp;variables_20093$primaryKey==&quot;Y&quot;
+        ],
+        collapse = &quot;, &quot;)
+        )
+
+
+
+# identify duplicates in swc_externalLabDataByAnalyte
+
+swc_externalLabDataByAnalyte_dups &lt;- neonOS::removeDups(
+  swc_externalLabDataByAnalyte,
+  variables_20093)
+
+
+
+# no duplicates, great!
+
+
+
+# lab data is published `long-format` with 28 analytes analyzed
+
+# show all the analytes published in the lab data
+
+print(unique(swc_externalLabDataByAnalyte$analyte))
+
+##  [1] &quot;TDP&quot;                    &quot;SO4&quot;                    &quot;TP&quot;                     &quot;NH4 - N&quot;                &quot;Mg&quot;                    
+##  [6] &quot;NO2 - N&quot;                &quot;F&quot;                      &quot;Si&quot;                     &quot;TDS&quot;                    &quot;UV Absorbance (254 nm)&quot;
+## [11] &quot;Cl&quot;                     &quot;Ca&quot;                     &quot;TN&quot;                     &quot;UV Absorbance (280 nm)&quot; &quot;NO3+NO2 - N&quot;           
+## [16] &quot;TSS&quot;                    &quot;TPC&quot;                    &quot;TDN&quot;                    &quot;Na&quot;                     &quot;Br&quot;                    
+## [21] &quot;Mn&quot;                     &quot;Fe&quot;                     &quot;DOC&quot;                    &quot;DIC&quot;                    &quot;K&quot;                     
+## [26] &quot;Ortho - P&quot;              &quot;TOC&quot;                    &quot;TPN&quot;
+
+# for this exercise, subset lab data to only dissolved organic carbon (DOC)
+
+DOC &lt;- swc_externalLabDataByAnalyte%&gt;%
+  dplyr::filter(analyte==&quot;DOC&quot;)
+
+
+
+# plot a timeseries of DOC
+
+DOC_plot &lt;- DOC%&gt;%
+  ggplot2::ggplot(aes(x=collectDate,y=analyteConcentration))+
+  ggplot2::geom_point()+
+  ggplot2::labs(title = &quot;Dissolved organic carbon (DOC) over time&quot;,
+                y = &quot;DOC (mg/L)&quot;,
+                x = &quot;Date&quot;)
+
+
+
+DOC_plot
+</code></pre>
 <p><img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/R/AIS-data/AIS-AOS-integration-tutorial/rfigs/wrangle-plot-swc-1.png" alt=" " /></p>
 <p>Next, download AIS data, subset to the appropriate <code>horizontalPosition</code>, wrangle
 the data for analysis, and plot the data.</p>
@@ -1502,44 +1524,58 @@ waq &lt;- neonUtilities::loadByProduct(dpID=&quot;DP1.20288.001&quot;,
 
 list2env(waq,envir = .GlobalEnv)
 </code></pre>
-<p>The data table we are interested in here is:</p>
-<ul>
-<li><code>waq_instantaneous</code>
-<ul>
-<li>
-<p>Wide-format table published many water quality metrics in wide-format,
-including fDOM, dissolved oxygen, specific conductance, pH, chlorophyll, and
-turbidity.</p>
-<h1 id="waq-instantaneous-table-published-many-water-quality-metrics-in-wide-format"><code>waq_instantaneous</code> table published many water quality metrics in wide-format</h1>
-<h1 id="other-than-fdom-many-other-metrics-are-published-in-waq-instantaneous">other than fDOM, many other metrics are published in <code>waq_instantaneous</code></h1>
-<h1 id="including-dissolved-oxygen-specific-conductance-ph-chlorophyll-turbidity">including: dissolved oxygen, specific conductance, pH, chlorophyll, turbidity</h1>
-<h1 id="according-to-the-neon-ais-spatial-design-fdom-is-only-measured-at-the">according to the NEON AIS spatial design, fDOM is only measured at the</h1>
-<h1 id="downstream-sensor-set-s2-hor-102-subset-to-hor-102">downstream sensor set (S2, HOR = 102); subset to HOR 102</h1>
-<p>WAQ_102 &lt;- waq_instantaneous%&gt;%
-dplyr::filter(horizontalPosition==102)</p>
-<h1 id="waq-instantaneous-is-published-at-a-1-minute-temporal-resolution"><code>waq_instantaneous</code> is published at a 1 minute temporal resolution</h1>
-<h1 id="for-ease-of-plotting-let-s-create-a-15-minute-average-table">for ease of plotting, let’s create a 15-minute average table</h1>
-<p>fDOM_15min &lt;- WAQ_102%&gt;%</p>
-<h1 id="remove-null-records">remove NULL records</h1>
-<p>dplyr::filter(!is.na(rawCalibratedfDOM))%&gt;%</p>
-<h1 id="remove-records-with-a-final-qf">remove records with a final QF</h1>
-<p>dplyr::filter(fDOMFinalQF==0)%&gt;%</p>
-<h1 id="create-15-minute-average-of-fdom">create 15-minute average of fDOM</h1>
-<p>mutate(roundDate=lubridate::round_date(endDateTime,“15 min”))%&gt;%
-group_by(siteID,roundDate)%&gt;%
-summarize(mean_fDOM=mean(rawCalibratedfDOM))</p>
-<h1 id="plot-a-timeseries-of-fdom">plot a timeseries of fDOM</h1>
-<p>fDOM_plot &lt;- fDOM_15min%&gt;%
-ggplot2::ggplot(aes(x=roundDate,y=mean_fDOM))+
-ggplot2::geom_line()+
-ggplot2::labs(title = “fluorescent dissolved organic matter (fDOM) over time”,
-y = “fDOM (QSU)”,
-x = “Date”)</p>
-<p>fDOM_plot</p>
-</li>
-</ul>
-</li>
-</ul>
+<p>The data table we are interested in here is <code>waq_instantaneous</code>: “Wide-format table
+published many water quality metrics in wide-format, including fDOM, dissolved oxygen,
+specific conductance, pH, chlorophyll, and turbidity.”</p>
+<pre><code># `waq_instantaneous` table published many water quality metrics in wide-format
+
+# other than fDOM, many other metrics are published in `waq_instantaneous`
+
+# including: dissolved oxygen, specific conductance, pH, chlorophyll, turbidity
+
+
+
+# according to the NEON AIS spatial design, fDOM is only measured at the 
+
+# downstream sensor set (S2, HOR = 102); subset to HOR 102
+
+WAQ_102 &lt;- waq_instantaneous%&gt;%
+  dplyr::filter(horizontalPosition==102)
+
+
+
+# `waq_instantaneous` is published at a 1 minute temporal resolution
+
+# for ease of plotting, let's create a 15-minute average table
+
+fDOM_15min &lt;- WAQ_102%&gt;%
+  
+  # remove NULL records
+  dplyr::filter(!is.na(rawCalibratedfDOM))%&gt;%
+  
+  # remove records with a final QF
+  dplyr::filter(fDOMFinalQF==0)%&gt;%
+  
+  # create 15-minute average of fDOM
+  mutate(roundDate=lubridate::round_date(endDateTime,&quot;15 min&quot;))%&gt;%
+  group_by(siteID,roundDate)%&gt;%
+  summarize(mean_fDOM=mean(rawCalibratedfDOM))
+
+
+
+# plot a timeseries of fDOM
+
+fDOM_plot &lt;- fDOM_15min%&gt;%
+  ggplot2::ggplot(aes(x=roundDate,y=mean_fDOM))+
+  ggplot2::geom_line()+
+  ggplot2::labs(title = &quot;fluorescent dissolved organic matter (fDOM) over time&quot;,
+                y = &quot;fDOM (QSU)&quot;,
+                x = &quot;Date&quot;)
+
+
+
+fDOM_plot
+</code></pre>
 <p><img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/R/AIS-data/AIS-AOS-integration-tutorial/rfigs/wrangle-plot-waq-1.png" alt=" " /></p>
 <p>Both data products are published in Coordinated Universal Time (UTC), as are all
 AOS and AIS data, which makes joining across tables easy. Let’s join the AOS and
